# reflect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  macro_bind.hpp  static_reflection.cpp  static_reflection.sln  static_reflection.vcxproj  static_reflection.vcxproj.filters
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu-clang.yml  cmake-ubuntu-gcc.yml  cmake-ubuntu-platform.yml  cmake-windows-platform.yml  cmake-windows-vs.yml
Aquarius/: reflection.hpp
Aquarius/reflection/: algorithm.hpp  detail.hpp  reflect_tuple.hpp  tuple_generated.hpp
example/: reflect.cpp  reflect.sln  reflect.vcxproj  reflect.vcxproj.filters  static_reflection.cpp  static_reflection.sln  static_reflection.vcxproj  static_reflection.vcxproj.filters
include/: reflect.hpp
include/aquarius/reflection/: reflect_tuple.hpp  tuple_size.hpp
include/reflect/: concepts.hpp  detail.hpp  for_each.hpp  generated.hpp  macro_bind.hpp  reflect.hpp  reflect_tuple.hpp  regist.hpp  size.hpp  tuple_generated.hpp  tuple_reflect.hpp  tuple_size.hpp  type_traits.hpp
include/reflection/: detail.hpp  reflect_tuple.hpp  tuple_generated.hpp  tuple_size.hpp
static_reflection/: algorithm.hpp  reflect_tuple.hpp  static_reflection.cpp  static_reflection.vcxproj  static_reflection.vcxproj.filters  tuple_generated.hpp
test/: generate.h  no_pod.h  unit_test.cpp  unit_test.sln  unit_test.vcxproj  unit_test.vcxproj.filters
unittest/: CMakeLists.txt  generate.h  no_pod.h  test.cpp  unittest.sln  unittest.vcxproj  unittest.vcxproj.filters
